Increased Z-Index of modal dialog to ensure appears on top of content

--- a/src/Common.Razor/wwwroot/Common.Razor.css
+++ b/src/Common.Razor/wwwroot/Common.Razor.css
@@ -56,7 +56,7 @@ div.common-adaptivestackpanel {
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 5000;
 }
 
 .bm-overlay {
@@ -64,7 +64,7 @@ div.common-adaptivestackpanel {
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: 5001;
     background-color: rgba(0,0,0,0.5);
 }
 
@@ -79,8 +79,8 @@ div.common-adaptivestackpanel {
     background-color: #fff;
     border-radius: 4px;
     border: 1px solid #fff;
-    padding: 15px;/*1.5rem;*/
-    z-index: 4;
+    padding: 15px;/*1.5rem;*/    
+    z-index: 5002;
 }
 
 .bm-header {
